# rosrider_gz

./: .gitignore  README.md
rosrider_gz_app/: CMakeLists.txt  package.xml
rosrider_gz_bringup/: CMakeLists.txt  package.xml
rosrider_gz_bringup/bridge/: explorer_r2_gz_bridge.yaml  husky_gz_bridge.yaml  kloubak_gz_bridge.yaml  next_gz_singular_bridge.yaml  next_gz_singular_ekf_bridge.yaml  next_gz_singular_world_bridge.yaml
rosrider_gz_bringup/config/: client.config  ekf_explorer_r2_moon_gazebo.yaml  ekf_gazebo.yaml  ekf_husky_gazebo.yaml  ekf_sim.yaml  rosrider_gz_bridge.yaml  simple_tracked_bridge.yaml  simulation.rviz  simulation_singular.rviz  ukf_explorer_r2_moon_gazebo.yaml  ukf_gazebo.yaml
rosrider_gz_bringup/launch/: ekf_world.launch.py  empty_world.launch.py  plotter-multi.py  plotter.py  simple_tracked.launch.py  world_cappa.launch.py  world_ekf.launch.py  world_empty.launch.py  world_maze.launch.py  world_moon.launch.py  world_willow.launch.py  world_willow_ekf.launch.py
rosrider_gz_description/: CMakeLists.txt  package.xml
rosrider_gz_description/models/cappadocia/: model.config  model.sdf
rosrider_gz_description/models/maze/: model.config  model.sdf
rosrider_gz_description/models/maze/meshes/: maze_walls.dae  maze_walls.stl
rosrider_gz_description/models/next/: model.config  model.sdf
rosrider_gz_description/models/next/meshes/: next_urdf.stl  vac_wheel.dae  wheel_left.dae  wheel_right.stl
rosrider_gz_description/models/next_singular/: model.config  model.sdf
rosrider_gz_description/models/next_singular/meshes/: fximu3e.dae  fximu3e.stl  ldlidar.dae  ldlidar.stl  next_urdf.dae  vac_wheel.stl  wheel_left.stl  wheel_right.dae
rosrider_gz_description/models/willow_mini/: model.config  model.sdf
rosrider_gz_description/models/willow_mini/meshes/: willow_mini.dae  willow_mini.stl
rosrider_gz_gazebo/: CMakeLists.txt  README.md  package.xml
rosrider_gz_gazebo/include/rosrider_gz_gazebo/: BasicSystem.hh  FullSystem.hh
rosrider_gz_gazebo/robots/: model_csiro_data61.sdf  model_kloubak.sdf  model_ozbot.sdf
rosrider_gz_gazebo/src/: BasicSystem.cc  FullSystem.cc
rosrider_gz_gazebo/worlds/: ekf_world.sdf  empty_world.sdf  robot_csiro_data61.sdf  robot_explorer_r2.sdf  robot_husky.sdf  robot_kloubak.sdf  robot_next_singular.sdf  robot_ozbot.sdf  world_cappa.sdf  world_ekf.sdf  world_empty.sdf  world_maze.sdf  world_moon.sdf  world_willow.sdf
