<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosrider_gz_description</name>
  <version>0.0.1</version>
  <description>SDFormat description files for the rosrider_gz project</description>
  <maintainer email="can@acada.dev">Can Altineller</maintainer>
  <license>LGPLv3</license>
  <author>Can Altineller</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
